derniers ajustement, c'est pas parfait mais tant pis

--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ task deployBigPrincess(dependsOn: ["shadowJar"]) {
                 put from: 'build/libs/esialrobotik.ia-2.0-all.jar', into: 'IA'
                 put from: 'config/2023/config.json', into: 'IA'
                 put from: 'config/2023/configCollection.json', into: 'IA'
-                put from: 'config/2023/table.json', into: 'IA'
+//                put from: 'config/2023/table.json', into: 'IA'
                 put from: 'config/2023/table0.tbl', into: 'IA'
                 put from: 'config/2023/table3000.tbl', into: 'IA'
                 put from: 'src/main/java/actions/a2023/actions/', into: 'IA'
@@ -68,7 +68,7 @@ task deploySmallPrincess(dependsOn: ["shadowJar"]) {
                 put from: 'build/libs/esialrobotik.ia-2.0-all.jar', into: 'IA'
                 put from: 'config/2023/config_PMI.json', into: 'IA/config.json'
                 put from: 'config/2023/configCollectionPmi.json', into: 'IA'
-                put from: 'config/2023/table.json', into: 'IA'
+//                put from: 'config/2023/table.json', into: 'IA'
                 put from: 'config/2023/table0.tbl', into: 'IA'
                 put from: 'config/2023/table3000.tbl', into: 'IA'
                 put from: 'src/main/java/actions/a2023/actions/', into: 'IA'
