--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ ssh.settings {
     knownHosts = allowAnyHosts
 }
 
-version '2.0'
-
-sourceCompatibility = 1.8
+version '3.0'
 
 remotes {
     bigPrincessPi {
@@ -109,8 +107,14 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
 
-    // Pi4J : https://pi4j.com/1.2/index.html
-    implementation 'com.pi4j:pi4j-core:1.2'
+    // Log à étudier
+    //implementation 'org.slf4j:slf4j-api:1.7.32'
+    //implementation 'org.slf4j:slf4j-simple:1.7.32'
+
+    // Pi4J : https://pi4j.com
+    implementation 'com.pi4j:pi4j-core:2.3.0'
+    implementation 'com.pi4j:pi4j-plugin-raspberrypi:2.3.0'
+    implementation 'com.pi4j:pi4j-plugin-pigpio:2.3.0'
 
     // PiCam : https://github.com/caprica/picam
     implementation group: 'uk.co.caprica', name: 'picam', version: '2.0.2'
