config and go start

--- a/config/2024/config.json
+++ b/config/2024/config.json
@@ -1,5 +1,5 @@
 {
-    "desc": "Configuration du robot 2024 - ??",
+    "desc": "Configuration du robot 2024 - MamaPrincess",
     "gpioColorSelector": 24,
     "gpioTirette": 23,
     "matchDuration": 99,
@@ -29,12 +29,12 @@
                 "dist": -200
             },
             {
-                "type": "set_x",
-                "value": 2855
+                "type": "set_y",
+                "value": 125
             },
             {
                 "type": "set_theta",
-                "value": 3.14159265359
+                "value": 1.570796327
             },
             {
                 "type": "go",
@@ -49,7 +49,7 @@
                 "dist": -200
             },
             {
-                "type": "set_y",
+                "type": "set_x",
                 "value": 1855
             },
             {
@@ -58,13 +58,13 @@
             },
             {
                 "type": "goto",
-                "x": 2800,
-                "y": 1775
+                "x": 1750,
+                "y": 250
             },
             {
                 "type": "face",
-                "x": 0,
-                "y": 1775
+                "x": 1750,
+                "y": 3000
             }
         ],
         "start3000": [
@@ -73,12 +73,12 @@
                 "dist": -200
             },
             {
-                "type": "set_x",
+                "type": "set_y",
                 "value": 2855
             },
             {
                 "type": "set_theta",
-                "value": 3.14159265359
+                "value": -1.570796327
             },
             {
                 "type": "go",
@@ -93,8 +93,8 @@
                 "dist": -200
             },
             {
-                "type": "set_y",
-                "value": 145
+                "type": "set_x",
+                "value": 1855
             },
             {
                 "type": "go",
@@ -102,13 +102,13 @@
             },
             {
                 "type": "goto",
-                "x": 2800,
-                "y": 225
+                "x": 1750,
+                "y": 2750
             },
             {
                 "type": "face",
-                "x": 0,
-                "y": 225
+                "x": 1750,
+                "y": 0
             }
         ]
     },
@@ -124,10 +124,10 @@
             "baud": 115200
         },
         "dataDir": "/home/pi/IA/actions/",
-        "init": [3, 4],
+        "init": [],
         "funnyAction": {
-            "actionId": 12,
-            "score": 5
+            "actionId": -1,
+            "score": 0
         }
     },
     "detection": {
@@ -172,9 +172,6 @@
                     "threshold": 500
                 }
             ]
-        },
-        "lidar": {
-            "port": "/dev/serial/by-path/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0"
         }
     }
 }
