--- a/build.gradle
+++ b/build.gradle
@@ -118,8 +118,8 @@ repositories {
 
 dependencies {
     // Log4J : https://logging.apache.org/log4j/2.x/
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
+    // implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
+    // implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
 
     // Log à étudier
     implementation 'org.slf4j:slf4j-api:2.0.10'
