--- a/build.gradle
+++ b/build.gradle
@@ -23,18 +23,18 @@ ssh.settings {
     knownHosts = allowAnyHosts
 }
 
-// remotes {
-//     bigPrincessPi {
-//         host = bigPrincessPiSettingsHost
-//         user = bigPrincessPiSettingsUser
-//         identity = file("${System.properties['user.home']}/.ssh/id_rsa")
-//     }
-//     smallPrincessPi {
-//         host = smallPrincessPiSettingsHost
-//         user = smallPrincessPiSettingsUser
-//         identity = file("${System.properties['user.home']}/.ssh/id_rsa")
-//     }
-// }
+remotes {
+    bigPrincessPi {
+        host = bigPrincessPiSettingsHost
+        user = bigPrincessPiSettingsUser
+        identity = file("${System.properties['user.home']}/.ssh/id_rsa")
+    }
+    smallPrincessPi {
+        host = smallPrincessPiSettingsHost
+        user = smallPrincessPiSettingsUser
+        identity = file("${System.properties['user.home']}/.ssh/id_rsa")
+    }
+}
 
 // Copy the Java modules, run script and JAR in the distribution directory
 // Copy the Java modules, run script and JAR in the distribution directory
@@ -117,13 +117,8 @@ repositories {
 }
 
 dependencies {
-    // Log4J : https://logging.apache.org/log4j/2.x/
-    // implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-    // implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
-
-    // Log à étudier
+    // SLF4J
     implementation 'org.slf4j:slf4j-api:2.0.10'
-    //implementation 'org.slf4j:slf4j-simple:2.0.10'
 
     // Pi4J : https://pi4j.com
     implementation 'com.pi4j:pi4j-core:2.4.0'
