--- a/config/2024/config.json
+++ b/config/2024/config.json
@@ -7,12 +7,6 @@
     "table3000Path": "table3000.tbl",
     "tableJsonPath": "table.json",
     "commandFile": "configCollection.json",
-    "lcd": {
-        "type": "full",
-        "i2cAddress": 81,
-        "lineCount": 2,
-        "lineLength": 16
-    },
     "loggerSocket": {
         "active": false,
         "host": "192.168.0.103",
@@ -38,11 +32,8 @@
             },
             {
                 "type": "set_y",
-                "value": 125
-            },
-            {
-                "type": "set_theta",
-                "value": 1.570796327
+                "value": 125,
+                "theta": 1.570796327
             },
             {
                 "type": "go",
@@ -66,7 +57,8 @@
             },
             {
                 "type": "set_x",
-                "value": 1855
+                "value": 1855,
+                "theta": 3.14159265359
             },
             {
                 "type": "go",
@@ -98,10 +90,7 @@
             },
             {
                 "type": "set_y",
-                "value": 2855
-            },
-            {
-                "type": "set_theta",
+                "value": 2855,
                 "value": -1.570796327
             },
             {
@@ -126,7 +115,8 @@
             },
             {
                 "type": "set_x",
-                "value": 1855
+                "value": 1855,
+                "theta": 3.14159265359
             },
             {
                 "type": "go",
@@ -150,17 +140,8 @@
             "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.3:1.0-port0",
             "baud": 115200
         },
-        "serial": {
-            "comment": "Arduino",
-            "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
-            "baud": 115200
-        },
         "dataDir": "/home/pi/IA/actions/",
-        "init": [],
-        "funnyAction": {
-            "actionId": -1,
-            "score": 0
-        }
+        "init": []
     },
     "detection": {
         "ultrasound": {
